--- a/projects/elements/src/menu/menu-item.css
+++ b/projects/elements/src/menu/menu-item.css
@@ -123,5 +123,5 @@
 }
 
 ::slotted([slot='suffix']) {
-  margin-left: auto;
+  margin-inline-start: auto;
 }
