--- a/projects/elements/src/textarea/textarea.css
+++ b/projects/elements/src/textarea/textarea.css
@@ -36,7 +36,7 @@
 }
 
 :host([layout*='horizontal']) ::slotted(label) {
-  padding-top: var(--nve-ref-size-100) !important;
+  padding-block-start: var(--nve-ref-size-100) !important;
   align-self: start !important;
 }
 
